Se modifico el subsitema historialmedico

--- a/subsistemas/historialmedico.html
+++ b/subsistemas/historialmedico.html
@@ -8,7 +8,26 @@
 <body>
     <a href="./../index.html">[Principal]</a>
     <h1>Historial Medico</h1>
+    <p>El subsistema "historial médico" permite registrar, actualizar y eliminar información sobre la salud de los animales, incluyendo diagnósticos, tratamientos, vacunaciones y medicamentos, con el objetivo de mejorar el bienestar animal y facilitar la gestión. </p>
+    <h1>Usuarios del subsistema</h1>
+    <li>Dueño</li>
+    <li>Medico veterinario</li>
 
+    <h1>Requerimientos por usuario</h1>
+    <h2>Requerimientos del Dueño</h2>
+    <p>El Dueño debe ser capaz de:</p>
+    <ol>
+        <li>Registrar y eliminar un porcino </li>
+        <li>Ingresar, actualizar y eliminar la información de salud </li>
+        <li>Registrar y eliminar medicamentos </li>
+    </ol>
+
+    <p>El medico veterinario debe ser capaz de:</p>
+    <ol>
+        <li>Dar diagnóstico sobre la salud del porcino</li>
+        <li>Dar seguimiento de algun tratamiento aplicado al porcino </li>
+        <li>Tener control sobre vacunación del porcino</li>
+    </ol>
 
     <h1>Responsable del subsistema</h1>
     <ul>
