Se modifico el index e historialmedico, se agrego imagen del subsistema

--- a/index.html
+++ b/index.html
@@ -6,17 +6,30 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Centro de Producción Porcina (CPP)</h1>
-    <p></p>
+    <h1>Centro de Producción Porcina (CPP)
+    </h1>
 
     <h1>Problematica</h1>
-    <p></p>
+    <p>
+       Las granjas enfrentan desafíos para identificar la cantidad, el estado y la alimentación de los cerdos.
+       Los registros manuales son poco confiables y complican el acceso a información en tiempo real, lo que afecta la gestión eficiente de los recursos y el bienestar animal.
+    </p>
 
     <h1>Objetivo del proyecto</h1>
-    <p></p>
+    <p>Desarrollar un subsistema de historial médico para la gestión integral de la compra y
+         venta de puercos en una granja de Santa María Daxtho Hidalgo, que registre de manera 
+         eficiente la salud y el estado de los cerdos utilizando información actualizada;
+          esto permitirá mejorar el control y seguimiento de los animales, optimizando la toma de decisiones 
+          sobre su bienestar y facilitando la gestión de recursos en el proceso.
+    </p>
 
     <h1>Subsistemas del proyecto</h1>
-    <p></p>
+    <p>El sistema se fragmentó utilizando la estrategia de "divide y vencerás",
+        la cual busca identificar unidades de desarrollo lo suficientemente
+        concisas para ser desarrolladas de manera independiente,
+        pero que al mismo tiempo sean fáciles de integrar en el sistema completo.
+    </p>
+    <img src="./images/Subsistema.png" alt="" width="600">
 
     <ul>
         <li><a href="./subsistemas/clientes.html">Clientes</a></li>
