--- a/subsistemas/historialmedico.html
+++ b/subsistemas/historialmedico.html
@@ -22,6 +22,7 @@
         <li>Registrar y eliminar medicamentos </li>
     </ol>
 
+    <h2>Requerimientos del Medico veterinario</h2>
     <p>El medico veterinario debe ser capaz de:</p>
     <ol>
         <li>Proporcionar diagnósticos sobre la salud del porcino </li>
