Se modifico el index

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <tr>
             <td>Edwin Alvarez Hernandez</td>
             <td>Samuel Cruz Godinez</td>
-            <td>April Milagros Falccon Caracas</td>
+            <td>April Milagros Falcon Caracas</td>
             <td>Maria Isabel Olguin Zenil</td>
             <td>Daniela Yamileth Pardo Gonzalez</td>
         </tr>
