Se modifico el index y se creo el directorio de members

--- a/index.html
+++ b/index.html
@@ -16,11 +16,9 @@
     </p>
 
     <h1>Objetivo del proyecto</h1>
-    <p>Desarrollar un subsistema de historial médico para la gestión integral de la compra y
-         venta de puercos en una granja de Santa María Daxtho Hidalgo, que registre de manera 
-         eficiente la salud y el estado de los cerdos utilizando información actualizada;
-          esto permitirá mejorar el control y seguimiento de los animales, optimizando la toma de decisiones 
-          sobre su bienestar y facilitando la gestión de recursos en el proceso.
+    <p>Mejorar los procesos de gestión y control de la compra y venta de puercos, así como el seguimiento de la salud y estado 
+        de los cerdos en la granja NICAMEX ubicada en Santa María Daxtho, mediante el desarrollo de un sistema WEB integrado utilizando tecnologias
+         de ingenieria de software
     </p>
 
     <h1>Subsistemas del proyecto</h1>
