Se modifico el index y subsistema historial medico

--- a/index.html
+++ b/index.html
@@ -6,18 +6,28 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Centro de Producción Porcina (CPP)
-    </h1>
+    <h1>Centro de Producción Porcina (CPP) </h1>
 
-    <h1>Problematica</h1>
+        <p>El Sistema de Gestión Porcina (CPP) es un sistema propuesto para optimizar
+            la gestión en el sector de las granjas,
+            diseñado para administrar de manera eficiente las áreas:
+             Clientes, Pedidos, Inventario de puercos, Inventario de alimentacion,
+             Historial Medico, Marketing, Personal y Proveedores.
+        </p>
+
+    <h1>Problematica del proyecto</h1>
     <p>
-       Las granjas enfrentan desafíos para identificar la cantidad, el estado y la alimentación de los cerdos.
-       Los registros manuales son poco confiables y complican el acceso a información en tiempo real, lo que afecta la gestión eficiente de los recursos y el bienestar animal.
+        Las granjas enfrentan problemas para identificar la cantidad,
+        estado y alimentacion de los cerdos.
+        Los registros manuales son poco confiables y
+        dificultan el acceso a información en tiempo real.
     </p>
 
     <h1>Objetivo del proyecto</h1>
-    <p>Mejorar los procesos de gestión y control de la compra y venta de puercos, así como el seguimiento de la salud y estado 
-        de los cerdos en la granja NICAMEX ubicada en Santa María Daxtho, mediante el desarrollo de un sistema WEB integrado utilizando tecnologias
+    <p>Mejorar los procesos de gestión y control de la compra y venta de puercos,
+        así como el seguimiento de la salud y estado
+        de los cerdos en la granja NICAMEX ubicada en Santa María Daxtho,
+        mediante el desarrollo de un sistema WEB integrado utilizando tecnologias
          de ingenieria de software
     </p>
 
