--- a/subsistemas/historialmedico.html
+++ b/subsistemas/historialmedico.html
@@ -8,7 +8,12 @@
 <body>
     <a href="./../index.html">[Principal]</a>
     <h1>Historial Medico</h1>
-    <p>El subsistema "historial médico" permite registrar, actualizar y eliminar información sobre la salud de los porcinos, incluyendo diagnósticos, tratamientos, vacunaciones y medicamentos, con el objetivo de mejorar el bienestar animal y facilitar la gestión. </p>
+
+    <p>El subsistema "historial médico" permite registrar, actualizar y eliminar
+         información sobre la salud de los porcinos, incluyendo diagnósticos, tratamientos,
+         vacunaciones y medicamentos, con el objetivo de mejorar el bienestar animal y
+         facilitar la gestión. </p>
+
     <h1>Usuarios del subsistema</h1>
     <li>Dueño</li>
     <li>Medico veterinario</li>
