Se creo la carpeta dbase y se modifico el subsistema historial medico

--- a/subsistemas/historialmedico.html
+++ b/subsistemas/historialmedico.html
@@ -7,12 +7,15 @@
 </head>
 <body>
     <a href="./../index.html">[Principal]</a>
+    <a href="./../dbase/dbaseinfo.html">[Base de datos]</a>
+
     <h1>Historial Medico</h1>
 
-    <p>El subsistema "historial médico" permite registrar, actualizar y eliminar
-         información sobre la salud de los porcinos, incluyendo diagnósticos, tratamientos,
-         vacunaciones y medicamentos, con el objetivo de mejorar el bienestar animal y
-         facilitar la gestión. </p>
+    <p>El subsistema "historial médico" permite registrar,
+        actualizar y eliminar información sobre la salud de
+        los porcinos, incluyendo diagnósticos, tratamientos,
+        vacunaciones y medicamentos, con el objetivo de mejorar
+        el bienestar animal y facilitar la gestión. </p>
 
     <h1>Usuarios del subsistema</h1>
     <li>Dueño</li>
@@ -22,17 +25,39 @@
     <h2>Requerimientos del Dueño</h2>
     <p>El Dueño debe ser capaz de:</p>
     <ol>
-        <li>Registrar y eliminar la información de un porcino </li>
-        <li>Ingresar, actualizar y eliminar datos sobre la salud del porcino </li>
-        <li>Registrar y eliminar medicamentos </li>
+        <li>Registrar y actualizar la información de un porcino comprado </li>
+        <p>Por ejemplo:</p>
+        <ul>
+        
+            <li>Id</li>
+            <li>Fecha de ingreso</li>
+            <li>Fecha de egreso</li>
+            <li>Fecha de deceso</li>
+            <li>Peso</li>
+            <li>Edad</li>
+            <li>Raza</li>
+            <li>Precio de compra</li>
+            <li>Precio de venta</li>
+            <li>Vacunas</li>
+            <li>Chequeos</li>
+            <li>Medicamentos</li>
+        </ul>
     </ol>
 
     <h2>Requerimientos del Medico veterinario</h2>
     <p>El medico veterinario debe ser capaz de:</p>
     <ol>
-        <li>Proporcionar diagnósticos sobre la salud del porcino </li>
-        <li>Realizar seguimiento de los tratamientos aplicados al porcino </li>
-        <li>Controlar el proceso de vacunación del porcino</li>
+        <li>Agregar tratamientos o vacunación de un puerco </li>
+        <p>Por ejemplo:</p>
+        <ul>
+            <li>Enfermedad</li>
+            <li>Diagnostico</li>
+            <li>Fecha de diagnostico</li>
+            <li>Tratamiento</li>
+            <li>Periodo del tratamiento</li>
+            <li>Gasto de consulta</li>
+            <li>Gasto de medicamento</li>
+        </ul>
     </ol>
 
     <h1>Responsable del subsistema</h1>
