--- a/subsistemas/historialmedico.html
+++ b/subsistemas/historialmedico.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <a href="./../index.html">[Principal]</a>
-    <a href="./../dbase/dbaseinfo.html">[Base de datos]</a>
+    <a href="./../dbase/dbaseinfo.html">[Diseño de la base de datos del subsistema]</a>
 
     <h1>Historial Medico</h1>
 
