Se agrego carpeta system

--- a/subsistemas/historialmedico.html
+++ b/subsistemas/historialmedico.html
@@ -8,6 +8,7 @@
 <body>
     <a href="./../index.html">[Principal]</a>
     <a href="./../dbase/dbaseinfo.html">[Diseño de la base de datos del subsistema]</a>
+    <a href="./../system/main.html">[Formulario para el registro de un nuevo porcino]</a>
 
     <h1>Historial Medico</h1>
 
